Fix spelling errors
Signed-off-by: Marek Pikuła <marek@serenitycode.dev>

--- a/hw/gen/example.html
+++ b/hw/gen/example.html
@@ -135,19 +135,19 @@
           <tr class="reg" align="left">
             <td align="center" rowspan="2">0x0000</td>
             <td align="left" rowspan="2">CHIP_ID_REG</td>
-            <td class="fixWidth" align="center" rowspan="2">This register cotains the part # and revision # for XYZ ASIC </td>
+            <td class="fixWidth" align="center" rowspan="2">This register contains the part # and revision # for XYZ ASIC </td>
             <td align="center" rowspan="2">32</td>
             <td class="">[31:4]</td>
             <td class="">part_num</td>
             <td class="" align="center">RO</td>
             <td class="" align="right">28'h1234567</td>
-            <td class=" fixWidth2">This field represents the chips part number</td>
+            <td class=" fixWidth2">This field represents the chip's part number</td>
           </tr>          <tr align="left">
             <td class="">[3:0]</td>
             <td class="">rev_num</td>
             <td class="" align="center">RO</td>
             <td class="" align="right">4'h1</td>
-            <td class=" fixWidth2">This field represents the chips revision number</td>
+            <td class=" fixWidth2">This field represents the chip's revision number</td>
                       </tr>          <tr class="reg" align="left">
             <td align="center" rowspan="2">0x0004</td>
             <td align="left" rowspan="2">ENABLE</td>
@@ -170,7 +170,7 @@
   </div>
   <footer align="center">
   <div> <p class="info">Powered by <a href="https://spinalhdl.github.io/SpinalDoc-RTD/"> SpinalHDL </a> </p> </div>
-  <div> <p class="info"> Sat Sep 16 00:44:08 CEST 2023 </p> </div>
+  <div> <p class="info"> Sat Sep 16 01:35:26 CEST 2023 </p> </div>
   </footer>
   </body>
 </html>
